--- a/docs/algorithm/算法.md
+++ b/docs/algorithm/算法.md
@@ -709,7 +709,7 @@ class Solution {
 
 思路：该题是判断一个二进制数种有几个1，第一种方法是将输入的整数n和1做与运算，得到的结果如果是1说明这一位是1，n向右移动一位继续比较直到n为0，这种做法当输入的n是负数是由于负数右移为了保证其还是一个负数会在前面补1，所以这种方式会导致死循环。方法二，既然右移负数会死循环那我们可以反过来定义一个flag为1，当flag与n比较后把flag向左移，直到flag为0，这样就不会存在负数死循环的问题，这种方法的时间复杂度和二进制的位数有关，32位就需要移动32次。方法三，有没有时间复杂度只和1相关的呢，答案是有的，我们能不能想办法比较一次就消掉n中的一个1，这样我们的比较次数就降为1的个数。
 
-方法是我们只需要先将n-1，再进行n&(n-1)的运算，例如1100，减一之后变成1011，进行n = n&(n-1)之后n就变成了1000，这样我们就消去了最优边的1,因为可能是负数，所以循环结束的条件是n==0；
+方法是我们只需要先将n-1，再进行n&(n-1)的运算，例如1100，减一之后变成1011，进行n = n&(n-1)之后n就变成了1000，这样我们就消去了最右边的1,因为可能是负数，所以循环结束的条件是n==0；
 
 法二
 
