--- a/docs/back/操作系统.md
+++ b/docs/back/操作系统.md
@@ -39,3 +39,15 @@
 4. 现代操作系统，如windows、linux
 
  
+
+## select、poll、epoll
+
+select：不断的轮询socket是否准备好，每次都是O(n)遍历所有的socket
+
+epoll：设备就绪后将socket加入到就绪列表，遍历就绪列表即可，近似认为是O（1）的复杂度，筛选了其他状态的socket
+
+I/O的两个阶段
+
+1、I/O设备准备好数据，以read为例，从硬盘（I/O设备）中读取数据到内核空间
+
+2、数据从内核空间拷贝到用户空间
